<resources>
    <string name="ipay_login_userid_hint">帐号</string>
    <string name="ipay_login_pwd_hint">登录密码</string>
    <string name="ipay_login_forget_pwd"><u>忘记登录密码？</u></string>
    <string name="ipay_login">登录</string>
    <string name="ipay_register">注册</string>
    <string name="ipay_return_to">返回</string>
    <string name="ipay_appname_title">充值</string>
    <string name="ipay_vip_level">vip%1$s</string>
    <string name="ipay_vip_level_account">VIP等级：</string>
    <string name="ipay_account_balance">账户余额：%1$s元</string>
    <string name="ipay_balance_recharge">余额充值：</string>
    <string name="ipay_account_balance_recharge">账户余额充值：</string>
    <string name="ipay_savings_card">网银在线</string>
    <string name="ipay_savings_uppay">银联支付</string>
    <string name="ipay_credit_card">信用卡</string>
    <string name="ipay_phone_recharge_card">手机充值卡</string>
    <string name="ipay_sms">短信</string>
    <string name="ipay_alipay">支付宝</string>
    <string name="ipay_tenpay">财付通</string>
    <string name="ipay_unicom_shop">沃商店</string>
    <string name="ipay_unicom_quick">联通快捷支付</string>
	<string name="ipay_mobile_mm">移动话费充值</string>
	<string name="ipay_mobile_wx">微信支付</string>
    <string name="ipay_tabbar_item2">账单</string>
    <string name="ipay_tabbar_item3">我的</string>
    <string name="ipay_tabbar_item4">设置</string>
    <string name="ipay_msg_push">消息推送</string>
    <string name="ipay_service_phone">客服电话</string>
    <string name="ipay_modify_pay_pwd">修改支付密码</string>
    <string name="ipay_find_pay_pwd">找回支付密码</string>
    <string name="ipay_modify_login_pwd">修改登录密码</string>
    <string name="ipay_quit_safely">安全退出</string>
    <string name="ipay_old_pwd">旧密码：</string>
    <string name="ipay_new_pwd">新密码：</string>
    <string name="ipay_input_old_pwd_hint">请输入旧密码</string>
    <string name="ipay_input_new_pwd_hint">请输入新密码</string>
    <string name="ipay_modify_pwd_tip">密码由6\u002d12位数字、字母、字符组成</string>
    <string name="ipay_show_pwd">显示密码</string>
    <string name="ipay_next_step">下一步</string>
    <string name="ipay_complete">完成</string>
    <string name="ipay_email_code">邮箱验证码</string>
    <string name="ipay_email_code_hint">请输入邮箱%s收到的验证码。\n邮件可能会延迟，如果长时间未收到邮件请尝试，重新获取。</string>
    <string name="ipay_sms_code">短信验证码</string>
    <string name="ipay_sms_code_hint">请输入手机号码%s收到的短信验证码</string>
    <string name="ipay_know">知道了</string>
    <string name="ipay_ok">确定</string>
    <string name="ipay_cancel">取消</string>
    <string name="ipay_no_pwd_pay">小额免密支付</string>
    <string name="ipay_no_pwd_pay_hint">开启后，使用手机付款，每笔付款额度小等于设定金额，无需输入支付密码。</string>
    <string name="ipay_no_pwd_pay_close_hint">关闭后，小额付款也需要输入支付密码。\n确认要关闭吗？</string>
    <string name="ipay_recharge">充值</string>
    <string name="ipay_no_pwd_pay_on_title">确认要开启吗？</string>
    <string name="ipay_no_pwd_pay_off_title">确认要关闭吗？</string>
    <string name="ipay_every_time_credit">支付额度</string>
    <string name="ipay_every_day_credit">支付额度</string>
    <string name="ipay_account_pay_pwd">支付密码</string>
    <string name="ipay_pay_pwd">支付密码：</string>
    <string name="ipay_login_pwd">登录密码</string>
    <string name="ipay_check_update">检测最新</string>
    <string name="ipay_version_info">版本说明</string>
    <string name="ipay_feed_back">建议反馈</string>
    <string name="ipay_email_register">邮箱注册</string>
    <string name="ipay_input_phone_number">请输入您的手机号码</string>
    <string name="ipay_get_sms">获取短信</string>
    <string name="ipay_set_login_pwd_hint">请设置登录密码</string>
    <string name="ipay_register_right_now">立即注册</string>
    <string name="ipay_i_agree_with">我已阅读同意遵守</string>
    <string name="ipay_input_email_hint">请输入您的邮箱</string>
    <string name="ipay_phone_register">手机注册</string>
    <string name="ipay_verifi_code">验证码</string>
    <string name="ipay_repost">重新发送</string>
    <string name="ipay_alipay_pay_success">通过支付宝支付成功</string>
    <string name="ipay_alipay_pay_fail">通过支付宝支付失败</string>
    <string name="ipay_alipay_not_installed">没有安装支付宝服务</string>
    <string name="ipay_find_pwd">找回密码</string>
    <string name="ipay_find_login_pwd">找回登录密码</string>
    <string name="ipay_success">成功</string>
    <string name="ipay_register_success">注册成功</string>
    <string name="ipay_login_success">登录成功</string>
    <string name="ipay_latest_version_tip">已经是最新版本</string>
    <string name="ipay_quit_safely_complete">已经安全退出</string>
    <string name="ipay_request_pay_error">请求支付失败！</string>
    <string name="ipay_phone_empty">手机号不能为空</string>
    <string name="ipay_get_sms_code">获取验证码</string>
    <string name="ipay_verifi_code_error">验证码错误！</string>
    <string name="ipay_account_or_code_empty">帐号和验证码不能为空！</string>
    <string name="ipay_password_empty">密码不能为空！</string>
    <string name="ipay_verify_code_send_success">验证码已发送到您的手机上，请查收</string>
    <string name="ipay_set_new_pwd_success">设置新密码成功</string>
    <string name="ipay_username_empty">用户名不能为空！</string>
    <string name="ipay_no_money_input">没有输入金额</string>
    <string name="ipay_wait_for_logining">正在登录，请稍等\u2026</string>
    <string name="ipay_wait_for_request_data">正在载入\u2026</string>
    <string name="ipay_connect_to_server_failed">连接服务器失败,请检查网络设置</string>
    <string name="ipay_net_error">数据处理错误</string>
    <string name="ipay_net_param_error">参数错误</string>
    <string name="ipay_net_memory_error">内存错误</string>
    <string name="ipay_net_file_error">文件错误</string>
    <string name="ipay_net_read_error">网络读取异常错误</string>
    <string name="ipay_net_space_insufficent_error">空间不足</string>
    <string name="ipay_net_internal_error">内部未知错误</string>
    <string name="ipay_loading">正在载入…</string>
    <string name="ipay_sms_content">短信内容</string>
    <string name="ipay_smallpay_success">小额免密支付设置成功</string>
    <string name="ipay_smallpay_failed">小额免密支付设置失败</string>
    <string name="ipay_press_once_more_to_quit">再按一次退出程序</string>
    <string name="ipay_vip_level_name">级</string>
    <string name="ipay_remain_money_name">元</string>
    <string name="ipay_income">收入</string>
    <string name="ipay_outlay">支出</string>
    <string name="ipay_trading_success">交易成功</string>
    <string name="ipay_wait_to_pay">等待支付</string>
    <string name="ipay_bill_app_name">应用名称：</string>
    <string name="ipay_bill_money">金　　额：</string>
    <string name="ipay_bill_number">订 单 号：</string>
    <string name="ipay_bill_time">交易时间：</string>
    <string name="ipay_bill_detail">账单详情</string>
    <string name="ipay_bill_status">交易状态：</string>
    <string name="ipay_mobilesmspay_tint">1、支持手机用户通过发送短信进行充值，短信发送费用0.1元/条，由运营商收取。\n2、短信发送完成之后请耐心等待，不要重复发送短信。\n3、运营商可能需要您进行2次确认，充值成功后即可到账，请您注意查收。</string>
    <string name="ipay_ok_to_pay">确认付款</string>
    <string name="ipay_phone_pay_card_hint">请输入充值卡卡号</string>
    <string name="ipay_phone_pay_pwd_hint">请输入充值卡密码</string>
    <string name="ipay_sms_pay_phonenumber_hint">请输入手机号码</string>
    <string name="ipay_preferential_center_btn_text">详情请查看</string>
    <string name="ipay_sms_recharge_title">短信充值</string>
    <string name="ipay_phonecard_recharge_title">手机充值卡</string>
    <string name="ipay_recharge_title">充值</string>
    <string name="ipay_sms_pay_title">话费充值</string>
    <string name="ipay_alipay_title">支付宝</string>
    <string name="ipay_oneclick_title">财付通</string>
    <string name="ipay_changduweb_title">网站充值</string>
    <string name="ipay_phonecard_pay_title">手机充值卡</string>
    <string name="ipay_nopwd_title">小额免密支付</string>
    <string name="ipay_nopwd_choose_other_account_title">小额免密支付</string>
    <string name="ipay_preferential_title">优惠活动</string>
  	<string name="ipay_personal_mypreferential_title">我的推荐</string>
    <string name="ipay_confirm_commit">确认提交</string>
    <string name="ipay_thanks_for_feeding_back">谢谢您的反馈！</string>
    <string name="ipay_last_words_you_can_input">您还可以输入%d字</string>
    <string name="ipay_pay_success">支付成功</string>
    <string name="ipay_pay_failed">支付失败</string>
    <string name="ipay_sms_recharge_result_tip">短信发送后请你耐心等待充值结果，充值成功后即可到帐。</string>
    <string name="ipay_continue_to_recharge">继续充值</string>
    <string name="ipay_smspay_mobile">中国移动话费充值</string>
    <string name="ipay_smspay_union">中国联通话费充值</string>
    <string name="ipay_smspay_telecommunications">中国电信话费充值</string>
    <string name="ipay_smspay_generatesms">发送短信</string>
    <string name="ipay_order_number">订单号：</string>
    <string name="ipay_buy_merchandis">购买商品：</string>
    <string name="ipay_buy_payments">商品价格：</string>
    <string name="ipay_operators">运营商：</string>
    <string name="ipay_card_number">卡    号：</string>
    <string name="ipay_card_password">密    码：</string>
    <string name="ipay_addressee">收件人：</string>
    <string name="ipay_send_message">发送内容：</string>
    <string name="ipay_sim_number">手机号码：</string>
    <string name="ipay_choose_paytype">选择支付方式：</string>
	<string name="ipay_smspay_specialhint">支付金额： %1$.2f元（其中%2$.2f元为运营商手续费）</string>
	<string name="ipay_smspay_sendmessagehint">请使用手机  %1$s 通过短信发送以上内容完成充值，号码不一致无法完成充值操作。</string>
    <string name="ipay_login_failed">登录失败，请重试</string>
    <string name="ipay_inner_error">内部错误</string>
    <string name="ipay_sms_code_prefix">您的手机验证码为：</string>
    <string name="ipay_wait_for_getting_sms_code">正在获取短信验证码，请稍等\u2026</string>
    <string name="ipay_wait_for_register">正在注册中，请稍等..</string>
    <string name="ipay_month">月</string>
    <string name="ipay_current_month">本月</string>
    <string name="ipay_phone_invalid">手机号格式错误！</string>
    <string name="ipay_recharge_card_number_len_error">%1$s充值卡卡号应为%2$d位，请您确认后再次输入</string>
    <string name="ipay_recharge_card_pwd_len_error">%1$s充值卡密码应为%2$d位，请您确认后再次输入</string>
    <string name="ipay_money_invalid">金额错误！</string>
    <string name="ipay_input_money_too_much">输入金额太大，应不超过%.2f！</string>
    <string name="ipay_input_money_too_few">输入金额太小，应不小于%.2f！</string>
    <string name="ipay_smspay_nocompatil_hint">运营商暂不支持本金额短信支付，请选择其他方式充值。为此给您带来不便请谅解。！</string>
    <string name="ipay_my_income">我的收入</string>
    <string name="ipay_my_outlay">我的支出</string>
	<string name="ipay_preferential_time">时间：%1$s</string>
    <string name="ipay_get_bill_failed">获取账单信息失败，请重试</string>
    <string name="ipay_get_appbill_failed">获取应用账单信息失败，请重试</string>
    <string name="ipay_current_month_no_income">当前月份无收入明细</string>
    <string name="ipay_current_month_no_outlay">当前月份无支出明细</string>
	<string name="ipay_smsoperator_not_support_money">%1$s运营商暂不支持%2$s元的短信支付，请选择以下任意一种支付方式进行支付：</string>
	<string name="ipay_oneclick_paymoney">应付金额：</string>
	<string name="ipay_merchandise_name">商品名称：</string>
	<string name="ipay_order_start_time">创建时间：</string>
	<string name="ipay_cooperator_time">发货时间：</string>
	<string name="ipay_order_status">订单状态：</string>
	<string name="ipay_email_invalid">邮箱地址填写错误！</string>
	<string name="ipay_email_empty">邮箱地址不能为空！</string>
	<string name="ipay_password_too_short">密码太短！</string>
	<string name="ipay_feedback_content_empty">请输入反馈内容</string>
	<string name="ipay_checking_verify_code">正在校验手机验证码..</string>
	<string name="ipay_user_canceled">用户取消</string>
	<string name="ipay_set_pay_pwd">设置支付密码</string>
	<string name="ipay_setting">设置</string>
	<string name="ipay_account">我的</string>
	<string name="ipay_prompt">温馨提示</string>
	<string name="ipay_sms_recharge_step1_hint">1、由于运营商的规定，不同地区的充值次数限制，最高的每个手机号限充值10笔/日，若无法充值，请使用其他方式充值。\n2、由于运营商需收取一定的充值渠道费用，请注意您的扣费金额， 大额充值建议您使用其他充值方式。</string>
	<string name="ipay_recharge_finish">退出充值</string>
	<string name="ipay_recharge_finish_tip_title">订单已提交，请您耐心等待，不要重复提交订单</string>
	<string name="ipay_recharge_finish_tip">由于网络原因，到账可能会延迟，请您退出充值中心1\u002d3分钟后查询账户到账信息。</string>
	<string name="ipay_recharge_failed">充值失败</string>
	<string name="ipay_recharge_failed_tip">由于网络、用户取消或者服务器问题导致充值失败，请返回重试</string>
	<string name="ipay_chinamobile_sms_verifycode_tip">1、点击获取验证码，您将收到验证码短信，您可以在本页面输入验证码充值，也可以直接回复验证码充值。\n2、支付成功后，系统将向您发送提示短信，次日由10086再次下发移动阅读基地资费的提示短信，请注意查收。</string>
	<string name="ipay_input_verify_code">请输入验证码：</string>
	<string name="ipay_input_verify_code_hint">请输入验证码</string>
	<string name="ipay_commit">提交</string>
</resources>