<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@color/ipay_page_bg">
  <!-- 顶部标题栏 -->
	<include
		layout="@layout/ipay_common_topbar">
	</include>
	    <LinearLayout 
	  		android:layout_below="@id/topbar"
		    android:orientation="vertical"
		    android:paddingTop="@dimen/ipay_common_top_padding"
			android:paddingLeft="@dimen/ipay_common_horizontal_padding"
			android:paddingRight="@dimen/ipay_common_horizontal_padding" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent">
					
			<LinearLayout
				android:orientation="vertical"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_marginTop="25dp">
				<LinearLayout 
					android:id="@+id/check_update"
					android:layout_width="fill_parent"
					android:layout_height="@dimen/ipay_height_setting_item"
					android:orientation="horizontal"
					android:background="@drawable/ipay_list_item_top_selector"
			   		android:paddingLeft="@dimen/ipay_left_padding_setting_item"
			   		android:paddingRight="@dimen/ipay_right_padding_setting_item">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						android:text="@string/ipay_card_number"
						android:textSize="@dimen/ipay_fontsize_middle"
						android:textColor="@color/ipay_black">
					</TextView>
					<EditText
						android:id="@+id/card_edittext"
					    android:layout_width="wrap_content"
					    android:layout_height="fill_parent" 
					    android:layout_weight="1"
					    android:background="@null"
					    android:hint="@string/ipay_phone_pay_card_hint"
						android:layout_gravity="center"
						android:gravity="center_vertical|left"
						android:inputType="number"
						/>
				</LinearLayout>
				<LinearLayout 
					android:id="@+id/version_info"
					android:layout_width="fill_parent"
					android:layout_height="@dimen/ipay_height_setting_item"
					android:orientation="horizontal"
					android:background="@drawable/ipay_list_item_bot_selector"
			   		android:paddingLeft="@dimen/ipay_left_padding_setting_item"
			   		android:paddingRight="@dimen/ipay_right_padding_setting_item">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						android:text="@string/ipay_card_password"
						android:textSize="@dimen/ipay_fontsize_middle"
						android:textColor="@color/ipay_black">
					</TextView>
				    <EditText
						android:id="@+id/pwd_edittext"
					    android:layout_width="wrap_content"
					    android:layout_height="fill_parent" 
					    android:layout_weight="1"
					    android:background="@null"
					    android:hint="@string/ipay_phone_pay_pwd_hint"
						android:layout_gravity="center"
						android:gravity="center_vertical|left"
						android:inputType="number"
						/>
				</LinearLayout>
			</LinearLayout>
			
			<Button
				android:id="@+id/next_btn"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/ipay_smspaycenter_button_height"
				android:layout_gravity="center_horizontal"
				android:text="@string/ipay_commit"
				android:textSize="@dimen/ipay_fontsize_middle"
				android:textColor="@color/ipay_white"
				android:gravity="center"
				android:background="@drawable/ipay_red_btn_selector"
				android:layout_marginTop="30dp"
				android:enabled="false">
			</Button>
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="15dp"
				android:layout_below="@+id/phonepay_pay_btn">
			</TextView>
	    </LinearLayout>
	
</RelativeLayout>
