<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@color/ipay_page_bg">
  <!-- 顶部标题栏 -->
	<include
		layout="@layout/ipay_common_topbar">
	</include>
	    <LinearLayout 
	    android:orientation="vertical"
	    android:paddingTop="@dimen/ipay_smspaycenter_page_vertical_padding"
		android:paddingLeft="@dimen/ipay_smspaycenter_page_horizontal_padding"
		android:paddingRight="@dimen/ipay_smspaycenter_page_horizontal_padding" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent"
	  	android:layout_below="@id/topbar">
	    	<LinearLayout 
	    		android:id="@+id/smspay_phone_layout"
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/ipay_smspaycenter_phone_layout_height"
		    	android:background="@drawable/ipay_white_panel"
		    	android:paddingLeft="@dimen/ipay_smspaycenter_phone_leftmargin" 
		    	android:paddingRight="@dimen/ipay_smspaycenter_phone_rightmargin" 
		    	android:gravity="center_vertical">
		    	<LinearLayout 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:layout_gravity="center_vertical"
					>
	    			<TextView
		    			android:id="@+id/phone_number_label"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="@string/ipay_sim_number"
						android:textSize="@dimen/ipay_fontsize_middle"
						android:textColor="@color/ipay_black"
						android:gravity="center_vertical" 
						android:layout_gravity="center_vertical">
					</TextView>
		    		<View
						android:layout_height="1dp"
						android:layout_width="15dp"
						/>
					<EditText 
						android:id="@+id/phone_number_edittext"
			    		android:layout_width="fill_parent" 
						android:layout_height="wrap_content"
						android:textSize="@dimen/ipay_fontsize_middle"
						android:textColor="@color/ipay_black"
						android:gravity="center_vertical|left"
						android:hint="@string/ipay_sms_pay_phonenumber_hint"
						android:background="@drawable/ipay_edit_small"
						android:layout_gravity="center_vertical"
					    android:inputType="phone"
					    android:maxLength="11"
					    android:paddingLeft="2sp"
						/>
		    	</LinearLayout>	
			    
		    </LinearLayout>	
		    
			<View 
				android:layout_width="fill_parent"
				android:layout_height="1dp" 
				android:layout_marginTop="15dp"
				android:layout_marginBottom="17dp"
				android:background="@color/ipay_sms_rearge_page_line"
				/>

			<Button
				android:id="@+id/next_btn"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/ipay_smspaycenter_button_height"
				android:layout_gravity="center_horizontal"
				android:text="@string/ipay_next_step"
				android:textSize="@dimen/ipay_fontsize_middle"
				android:textColor="@color/ipay_white"
				android:gravity="center"
				android:background="@drawable/ipay_red_btn_selector"
				android:enabled="false">
			</Button>
			<LinearLayout
				android:layout_marginTop="47dp"
				android:layout_height="22dp" 
				android:layout_width="fill_parent">
				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/ipay_prompt" 
					android:layout_gravity="left|center_vertical">
				</ImageView>
				<TextView 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/ipay_prompt"
					android:textSize="@dimen/ipay_fontsize_middle"
					android:textColor="@color/ipay_black"
					android:layout_marginLeft="5dp"/>
			</LinearLayout>
			<TextView
				android:id="@+id/smspayhint"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/ipay_sms_recharge_step1_hint"
				android:textSize="@dimen/ipay_fontsize_small"
				android:textColor="@color/ipay_gray"
				android:layout_marginTop="8dp"
				android:layout_below="@id/smspay_generatesms_btn">
			</TextView>
			
	    </LinearLayout>
	    
</RelativeLayout>
